# mnemonic-engrave

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  cycle-prep-recon-me-bundle-preview-layer.md  cycle-prep-recon-me-bundle-preview-sidecar.md  cycle-prep-recon-me-converter-nits.md  minisign.pub
crates/me-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/me-cli/fuzz/: Cargo.toml
crates/me-cli/fuzz/fuzz_targets/: fuzz_convert.rs  fuzz_run_bundle.rs
crates/me-cli/src/: bundle.rs  classify.rs  lib.rs  main.rs  manifest.rs  ndef.rs  preview.rs  validate.rs
crates/me-cli/tests/: cli.rs  cross_lang.rs  golden.rs  preview_cross_lang.rs  prop.rs
crates/me-cli/tests/support/: invariants.rs
crates/me-cli/tests/vectors/: bundle-md1-mk1.json  md1-max.ndef  md1-short.ndef  mk1-chunk.ndef  mk1-short.ndef
design/: AUDIT_FUNDS_SAFETY.md  DESIGN_me_bundle_preview.md  FOLLOWUPS.md  IMPLEMENTATION_PLAN_firmware_pr1_codex32.md  IMPLEMENTATION_PLAN_firmware_pr2_mdmk_engrave.md  IMPLEMENTATION_PLAN_me_bundle_phaseA.md  IMPLEMENTATION_PLAN_me_bundle_phaseB_preview.md  IMPLEMENTATION_PLAN_me_converter.md  IMPLEMENTATION_PLAN_me_converter_polish.md  IMPLEMENTATION_PLAN_me_testing_hardening.md  IMPLEMENTATION_PLAN_seedhammer_10a_md_encoder.md  IMPLEMENTATION_PLAN_seedhammer_10b_md_walletpolicy.md  IMPLEMENTATION_PLAN_seedhammer_T1_address_display.md  IMPLEMENTATION_PLAN_seedhammer_T2a_ms1_decode.md  IMPLEMENTATION_PLAN_seedhammer_T2b_mk1_decode.md  IMPLEMENTATION_PLAN_seedhammer_T2c_md1_decode.md  IMPLEMENTATION_PLAN_seedhammer_T3_receive_address_verify.md  IMPLEMENTATION_PLAN_seedhammer_T4_seed_xpub_mk1.md  IMPLEMENTATION_PLAN_seedhammer_T5_bundle_sequencing.md  IMPLEMENTATION_PLAN_seedhammer_T6a1_headless.md  IMPLEMENTATION_PLAN_seedhammer_T6a2_gui.md  IMPLEMENTATION_PLAN_seedhammer_T6b_supplied_md1.md  IMPLEMENTATION_PLAN_seedhammer_T6c_phaseA_encode_multisig.md  IMPLEMENTATION_PLAN_seedhammer_T6c_phaseB_picker.md  IMPLEMENTATION_PLAN_seedhammer_T7b_bip85_derive.md  IMPLEMENTATION_PLAN_seedhammer_bip85_custom_index.md  IMPLEMENTATION_PLAN_seedhammer_codex32_input_polish.md  IMPLEMENTATION_PLAN_seedhammer_codex32_multishare_recovery.md  IMPLEMENTATION_PLAN_seedhammer_engrave_bugfixes.md  IMPLEMENTATION_PLAN_seedhammer_input_slice1.md  IMPLEMENTATION_PLAN_seedhammer_mstar_phaseA.md  IMPLEMENTATION_PLAN_seedhammer_mstar_phaseB.md  IMPLEMENTATION_PLAN_seedhammer_passphrase_flow.md  IMPLEMENTATION_PLAN_seedhammer_passphrase_keyboard.md  IMPLEMENTATION_PLAN_seedhammer_scrub_batch_fixes.md  (+72 more)
(+283 files in other folders)
