[package]
name = "mnemonic-engrave"
version = "0.3.0"
edition = "2021"
description = "Convert m-format constellation strings (md1/mk1) into NFC NDEF payloads for SeedHammer II; refuses secret ms1."
license = "MIT OR Unlicense"
repository = "https://github.com/bg002h/mnemonic-engrave"
homepage = "https://github.com/bg002h/mnemonic-engrave"
readme = "README.md"
keywords = ["bitcoin", "nfc", "seedhammer", "backup", "bech32"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "me"
path = "src/main.rs"

[lib]
name = "mnemonic_engrave"
path = "src/lib.rs"

[dependencies]
md-codec = "0.40"
mk-codec = "0.4"
clap = { version = "4", features = ["derive"] }
zeroize = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
# Property-testing layer (Cycle C / F18). MSRV of all proptest 1.x ≤ 1.85.0 (CI).
proptest = "1"
